tests/baselines/reference/emitArrowFunctionWhenUsingArguments05_ES6(strict=true).errors.txt
emitArrowFunctionWhenUsingArguments05_ES6.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments05_ES6.ts(1,12): error TS7006: Parameter 'arguments' implicitly has an 'any' type.


==== emitArrowFunctionWhenUsingArguments05_ES6.ts (2 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
               ~~~~~~~~~
!!! error TS7006: Parameter 'arguments' implicitly has an 'any' type.
        var a = () => arguments;
    }